<resources>
    <string name="app_name">GiftsApp</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="posts">Posts</string>
    <string name="my_posts">My Posts</string>
    <string name="create_post">Create Post</string>
    <string name="profile">Profile</string>
    <string name="type_password">Type Password</string>
    <string name="type_confirm_password">Type Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="save">save</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="type_email_address">Type Email Address</string>
    <string name="reset">Reset</string>
    <string name="create_new_post">Create New Post</string>
    <string name="type_post_title">Type post title</string>
    <string name="type_post_description">Type post description</string>
    <string name="create">Create</string>
    <string name="close">Close</string>
    <string name="type_comment">Type comment</string>
    <string name="send">Send</string>
</resources>