<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/navigateToSignInBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:src="@drawable/ic_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/resetPasswordLabelView"
        android:layout_marginTop="50dp"
        android:text="@string/reset_password"
        android:textColor="#797979"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/inputEmailAddressView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordLabelView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:endIconMode="clear_text"
        android:hint="@string/type_email_address"
        android:layout_width="match_parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPasswordBtn"
        android:text="@string/reset"
        android:layout_marginTop="30dp"
        android:background="@drawable/custome_button"
        android:textColor="#29323c"
        app:layout_constraintTop_toBottomOf="@id/inputEmailAddressView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>