<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@drawable/gradient_background">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:background="#FFE6FA"
        android:drawableStart="@drawable/ic_back"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/close"
        android:textColor="#29323c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toTopOf="@id/inputCommentTextView"
        app:layout_constraintTop_toBottomOf="@id/closeBtn"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/inputCommentTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/type_comment"
        android:textColorHint="@color/black"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="#E3FDF5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sendCommentBtn"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendCommentBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:background="#E3FDF5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/inputCommentTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>